Moved robot UFDF models to XX_description directories
urdf/robots/smilodon_description
urdf/robots/caracara_description
urdf/robots/caldus_description

--- a/urdf/robots/caldus_description/CMakeLists.txt
+++ b/urdf/robots/caldus_description/CMakeLists.txt
@@ -1,6 +1,5 @@
-cmake_minimum_required(VERSION 3.0.2)
-project(caracara_description)
-
+cmake_minimum_required(VERSION 3.1.1)
+project(caldus_description)
 
 find_package(catkin REQUIRED)
 
