--- a/urdf/robots/caracara_description/package.xml
+++ b/urdf/robots/caracara_description/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>caracara_description</name>
-  <version>1.0.0</version>
-  <description>The falcon_description package</description>
-  <maintainer email="dtdavi1@nps.edu">dtdavi1</maintainer>
+  <version>3.1.1</version>
+  <description>The caracara_description package</description>
+  <maintainer email="dtdavi1@nps.edu">dtd</maintainer>
   <license>Apache2</license>
-  <author email="dtdavi1@nps.edu">dtdavi1</author> -->
+  <author email="dtdavi1@nps.edu">dtd</author> -->
   <buildtool_depend>catkin</buildtool_depend>
   <export>
     <!-- Other tools can request additional information be placed here -->
