--- a/urdf/robots/smilodon_description/CMakeLists.txt
+++ b/urdf/robots/smilodon_description/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.0.2)
-project(caldus_description)
+cmake_minimum_required(VERSION 3.1.1)
+project(smilodon_description)
 
 find_package(catkin REQUIRED)
 
