--- a/gazebo/dave_gazebo_world_plugins/CMakeLists.txt
+++ b/gazebo/dave_gazebo_world_plugins/CMakeLists.txt
@@ -9,15 +9,45 @@ else()
 endif()
 
 find_package(catkin REQUIRED COMPONENTS
-    gazebo_dev)
+    gazebo_dev
+    gazebo_msgs
+)
 find_package(Boost REQUIRED COMPONENTS system)
+find_package(Protobuf REQUIRED)
 
 set(DAVE_GAZEBO_WORLD_PLUGINS_LIST "")
 
+file(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/msgs)
+# add_subdirectory(msgs)
+set(PROTOBUF_IMPORT_DIRS "")
+foreach(ITR ${GAZEBO_INCLUDE_DIRS})
+  if(ITR MATCHES ".*gazebo-[0-9.]+$")
+    set(PROTOBUF_IMPORT_DIRS "${ITR}/gazebo/msgs/proto")
+  endif()
+endforeach()
+
+message(STATUS "PROTOBUF_IMPORT_DIRS = " ${PROTOBUF_IMPORT_DIRS})
+
+set(GAZEBO_MSG_INCLUDE_DIRS)
+foreach(ITR ${GAZEBO_INCLUDE_DIRS})
+  if(ITR MATCHES ".*gazebo-[0-9.]+$")
+    set(GAZEBO_MSG_INCLUDE_DIRS "${ITR}/gazebo/msgs")
+  endif()
+endforeach()
+
+message(STATUS "GAZEBO_MSG_INCLUDE_DIRS = " ${GAZEBO_MSG_INCLUDE_DIRS})
+file(GLOB msgs msgs/*.proto)
+
 catkin_package(
-  INCLUDE_DIRS
+	INCLUDE_DIRS
     include
-  LIBRARIES
+    ${CMAKE_CURRENT_BINARY_DIR} # for generated messages
+    ${GAZEBO_MSG_INCLUDE_DIRS}
+	LIBRARIES
+    dave_ocean_current_world_plugin
+	CATKIN_DEPENDS
+		gazebo_msgs
+		gazebo_dev
 )
 
 include_directories(${PROJECT_SOURCE_DIR}/include
@@ -25,13 +55,41 @@ include_directories(${PROJECT_SOURCE_DIR}/include
                     ${catkin_INCLUDE_DIRS}
                     ${GAZEBO_INCLUDE_DIRS}
                     ${GAZEBO_MSG_INCLUDE_DIRS}
+                    ${CMAKE_CURRENT_BINARY_DIR}
 #                   ...
 )
 
 link_directories(${catkin_LIBRARY_DIRS}
                  ${GAZEBO_LIBRARY_DIRS}
+                 ${GAZEBO_MSG_INCLUDE_DIRS}
+                 ${CMAKE_CURRENT_BINARY_DIR}/msgs
 #                ...
 )
+
+# ocean current world plugin
+protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${msgs})
+add_library(ocean_current_velocity_msgs SHARED ${PROTO_SRCS})
+target_link_libraries(ocean_current_velocity_msgs ${PROTOBUF_LIBRARY})
+list(APPEND DAVE_GAZEBO_WORLD_PLUGINS_LIST ocean_current_velocity_msgs)
+
+add_library(dave_ocean_current_world_plugin
+   SHARED
+   src/ocean_current_world_plugin.cc
+   src/gauss_markov_process.cc
+   src/tidal_oscillation.cc
+)
+add_dependencies(dave_ocean_current_world_plugin
+   ocean_current_velocity_msgs
+   ${catkin_EXPORTED_TARGETS}
+)
+target_link_libraries(dave_ocean_current_world_plugin
+   ocean_current_velocity_msgs
+   ${catkin_LIBRARIES}
+   ${PROTOBUF_LIBRARY}
+   ${GAZEBO_LIBRARIES}
+)
+list(APPEND DAVE_GAZEBO_WORLD_PLUGINS_LIST dave_ocean_current_world_plugin)
+
 
 # Plugin compile directions
 
