--- a/gazebo/dave_gazebo_ros_plugins/package.xml
+++ b/gazebo/dave_gazebo_ros_plugins/package.xml
@@ -17,6 +17,14 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>protobuf</exec_depend>
 
+  <depend>std_msgs</depend>
+  <depend>gazebo_msgs</depend>
+  <depend>gazebo_dev</depend>
+  <depend>geometry_msgs</depend>
+  <depend>dave_gazebo_world_plugins</depend>
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
+
   <export>
     <!-- Other tools can request additional information be placed here -->
   </export>
