Fixed missing depends in dave_worlds package CMakeLists.txt

--- a/models/dave_worlds/package.xml
+++ b/models/dave_worlds/package.xml
@@ -10,4 +10,6 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>gazebo_ros</depend>
+  <depend>uuv_sensor_ros_plugins</depend>
+  <depend>ds_sim</depend>
 </package>
