Fix naming convention (cannot start with num)

--- a/urdf/sensors/lindar_3dad_sl3_description/package.xml
+++ b/urdf/sensors/lindar_3dad_sl3_description/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>3dad_sl3_description</name>
+  <name>lidar_3dad_sl3_description</name>
   <version>3.1.1</version>
   <description>The 3dad_sl3_description package containing macros for the 3D at Depth SL3 subsea LIDAR</description>
 
