--- a/urdf/sensors/sonardyne_syrinx600_uuvsim_description/CMakeLists.txt
+++ b/urdf/sensors/sonardyne_syrinx600_uuvsim_description/CMakeLists.txt
@@ -13,7 +13,7 @@ install(DIRECTORY meshes urdf launch
         PATTERN "*~" EXCLUDE)
 
 
-install(DIRECTORY launch meshes robots urdf
+install(DIRECTORY launch meshes urdf
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
         PATTERN "*~" EXCLUDE)
 
